fix img stretching

--- a/styles/Cover.module.scss
+++ b/styles/Cover.module.scss
@@ -26,7 +26,7 @@
   align-items: flex-end;
   > img {
     max-height: 600px;
-    width: 80%;
+    max-width: 80%;
   }
 }
 
